...
  const MoodService._();

  /// 设置心情类别默认值
  static Future<void> setCategoryDefault() async {
    /// 默认值
    const moodCategoryData = [
      MoodCategoryData(icon: '😊', title: '开心'),
      MoodCategoryData(icon: '🎉', title: '惊喜'),
      MoodCategoryData(icon: '🤡', title: '滑稽'),
      MoodCategoryData(icon: '😅', title: '尴尬'),
      MoodCategoryData(icon: '😟', title: '伤心'),
      MoodCategoryData(icon: '🤯', title: '惊讶'),
      MoodCategoryData(icon: '🤩', title: '崇拜'),
      MoodCategoryData(icon: '😡', title: '生气'),
    ];

    for (final value in moodCategoryData) {
      DB.instance.insertMoodCategoryDefault(value);
    }
  }
...
