...
    "app_setting_security_localauth_signIntitle":"Authentication required",
    "app_setting_security_localauth_cancel":"Cancel",
    "app_setting_security_localauth_error_1":"You have failed many times, please try again later",

    "app_setting_theme":"Theme",
    "app_setting_theme_appearance":"Appearance",
    "app_setting_theme_appearance_system":"System",
    "app_setting_theme_appearance_light":"Light",
    "app_setting_theme_appearance_dark":"Dark",
    "app_setting_theme_themes":"Themes",
    
    "app_setting_language":"Language",
    "app_setting_language_system":"System",
...
